DAS-1530 - Update Trajectory Subsetter tests with required variables.

--- a/test/sds/SDS_Regression.ipynb
+++ b/test/sds/SDS_Regression.ipynb
@@ -1149,8 +1149,11 @@
     "traj_sub_non_prod_information = {'collection': Collection(id='C1242267295-EEDTEST'),\n",
     "                                 'granule_id': 'G1242274836-EEDTEST',\n",
     "                                 'shape_file_path': 'amazon_basin.geo.json',\n",
-    "                                 'variables': ['/BEAM0000/agbd', '/BEAM0000/delta_time',\n",
-    "                                               '/BEAM0000/lat_lowestmode', '/BEAM0000/lon_lowestmode']}\n",
+    "                                 'requested_variables': ['/BEAM0000/agbd'],\n",
+    "                                 'retrieved_variables': ['/BEAM0000/agbd', '/BEAM0000/delta_time',\n",
+    "                                                        '/BEAM0000/lat_lowestmode',\n",
+    "                                                        '/BEAM0000/lon_lowestmode',\n",
+    "                                                        '/BEAM0000/shot_number']}\n",
     "\n",
     "trajectory_subsetter_env = {Environment.LOCAL: traj_sub_non_prod_information,\n",
     "                            Environment.SIT: traj_sub_non_prod_information,\n",
@@ -1169,12 +1172,13 @@
    "source": [
     "### Trajectory Subsetter variable subset request:\n",
     "\n",
-    "This is a request to retrieve a variable subset of a GEDI L4A granule. The four expected output variables are:\n",
+    "This is a request to retrieve a variable subset of a GEDI L4A granule. The request will ask for a single variable `/BEAM0000/agbd`, but will retrieve an additional four variables that are required to make the output viable for downstream processing. The five expected output variables are:\n",
     "\n",
     "* `/BEAM0000/agbd` (above ground biomass density)\n",
-    "* `/BEAM0000/delta_time`\n",
-    "* `/BEAM0000/lat_lowestmode`\n",
-    "* `/BEAM0000/lon_lowestmode`"
+    "* `/BEAM0000/delta_time` (from the `coordinates` metadata attribute of `/BEAM0000/agbd`)\n",
+    "* `/BEAM0000/lat_lowestmode` (from the `coordinates` metadata attribute of `/BEAM0000/agbd`)\n",
+    "* `/BEAM0000/lon_lowestmode` (from the `coordinates` metadata attribute of `/BEAM0000/agbd`)\n",
+    "* `/BEAM0000/shot_number` (from the `ancillary_variables` metadata attribute of `/BEAM0000/agbd`, as configured by `sds-varinfo`)"
    ]
   },
   {
@@ -1188,13 +1192,13 @@
     "    ts_variable_file_name = 'trajectory_subsetter_variable.h5'\n",
     "    ts_variable_request = Request(collection=trajectory_subsetter_info['collection'],\n",
     "                                  granule_id=[trajectory_subsetter_info['granule_id']],\n",
-    "                                  variables=trajectory_subsetter_info['variables'])\n",
+    "                                  variables=trajectory_subsetter_info['requested_variables'])\n",
     "\n",
     "    submit_and_download(harmony_client, ts_variable_request, ts_variable_file_name)\n",
     "    assert exists(ts_variable_file_name), 'Unsuccessful Trajectory Subsetter variable subset request.'\n",
     "\n",
     "    assert all_variables_present(\n",
-    "        ts_variable_file_name, trajectory_subsetter_info['variables']\n",
+    "        ts_variable_file_name, trajectory_subsetter_info['retrieved_variables']\n",
     "    ), 'Missing variables in Trajectory Subsetter output'\n",
     "\n",
     "    print_success('Trajectory Subsetter variable subset request.')\n",
@@ -1223,7 +1227,7 @@
     "    ts_temporal_file_name = 'trajectory_subsetter_temporal.h5'\n",
     "    ts_temporal_request = Request(collection=trajectory_subsetter_info['collection'],\n",
     "                                  granule_id=[trajectory_subsetter_info['granule_id']],\n",
-    "                                  variables=trajectory_subsetter_info['variables'],\n",
+    "                                  variables=trajectory_subsetter_info['requested_variables'],\n",
     "                                  temporal={'start': datetime(2020, 7, 8, 1, 0, 0),\n",
     "                                            'stop': datetime(2020, 7, 8, 2, 0, 0)})\n",
     "\n",
@@ -1231,7 +1235,7 @@
     "    assert exists(ts_temporal_file_name), 'Unsuccessful Trajectory Subsetter temporal subset request.'\n",
     "\n",
     "    assert all_variables_present(\n",
-    "        ts_temporal_file_name, trajectory_subsetter_info['variables']\n",
+    "        ts_temporal_file_name, trajectory_subsetter_info['retrieved_variables']\n",
     "    ), 'Missing variables in temporal subset Trajectory Subsetter output'\n",
     "\n",
     "    print_success('Trajectory Subsetter temporal subset request.')\n",
@@ -1264,14 +1268,14 @@
     "    ts_bbox_bbox = BBox(w=-74, s=-34, e=-35, n=5)\n",
     "    ts_bbox_request = Request(collection=trajectory_subsetter_info['collection'],\n",
     "                              granule_id=[trajectory_subsetter_info['granule_id']],\n",
-    "                              variables=trajectory_subsetter_info['variables'],\n",
+    "                              variables=trajectory_subsetter_info['requested_variables'],\n",
     "                              spatial=ts_bbox_bbox)\n",
     "\n",
     "    submit_and_download(harmony_client, ts_bbox_request, ts_bbox_file_name)\n",
     "    assert exists(ts_bbox_file_name), 'Unsuccessful Trajectory Subsetter bounding box subset request.'\n",
     "\n",
     "    assert all_variables_present(\n",
-    "        ts_bbox_file_name, trajectory_subsetter_info['variables']\n",
+    "        ts_bbox_file_name, trajectory_subsetter_info['retrieved_variables']\n",
     "    ), 'Missing variables in bounding box spatial subset Trajectory Subsetter output'\n",
     "    assert variable_values_all_in_range(\n",
     "        ts_bbox_file_name, '/BEAM0000/lon_lowestmode', ts_bbox_bbox.w, ts_bbox_bbox.e\n",
@@ -1306,14 +1310,14 @@
     "    ts_polygon_file_name = 'trajectory_subsetter_polygon.h5'\n",
     "    ts_polygon_request = Request(collection=trajectory_subsetter_info['collection'],\n",
     "                                 granule_id=[trajectory_subsetter_info['granule_id']],\n",
-    "                                 variables=trajectory_subsetter_info['variables'],\n",
+    "                                 variables=trajectory_subsetter_info['requested_variables'],\n",
     "                                 shape=trajectory_subsetter_info['shape_file_path'])\n",
     "\n",
     "    submit_and_download(harmony_client, ts_polygon_request, ts_polygon_file_name)\n",
     "    assert exists(ts_polygon_file_name), 'Unsuccessful Trajectory Subsetter polygon spatial subset request.'\n",
     "\n",
     "    assert all_variables_present(\n",
-    "        ts_polygon_file_name, trajectory_subsetter_info['variables']\n",
+    "        ts_polygon_file_name, trajectory_subsetter_info['retrieved_variables']\n",
     "    ), 'Missing variables in polygon spatial subset Trajectory Subsetter output'\n",
     "\n",
     "    # Define the smallest bounding box that minimally encompasses the polygon area. All points should be\n",
