Tweaks some markdown text
DAS-1590

--- a/test/sds/SDS_Regression.ipynb
+++ b/test/sds/SDS_Regression.ipynb
@@ -1053,18 +1053,13 @@
    "id": "72eeff5d-0893-4937-bcd9-a187e548b961",
    "metadata": {},
    "source": [
-    "## Spatial Subsetting of projected grid.\n",
+    "## Spatial subsetting of projected grid.\n",
     "\n",
-    "This request uses the chained service that combines HOSS with MaskFill to offer\n",
-    "bounding box spatial subsetting of coordinate projected gridded data hosted in\n",
-    "OPeNDAP.\n",
+    "This request uses the chained service that combines HOSS with MaskFill to offer bounding box spatial subsetting of coordinate projected gridded data hosted in OPeNDAP.\n",
     "\n",
-    "The request will use the [ABoVE Tundra Vegetation Photosynthesis and\n",
-    "Respiration Model (TVPRM) Simulated Net Ecosystem Exchange\n",
-    "collection](https://cmr.uat.earthdata.nasa.gov/search/concepts/C1245804308-EEDTEST.html). This\n",
-    "collection uses an Albers Conical Equal Area projection.\n",
+    "The request will use the [ABoVE Tundra Vegetation Photosynthesis and Respiration Model (TVPRM) Simulated Net Ecosystem Exchange collection](https://cmr.uat.earthdata.nasa.gov/search/concepts/C1245804308-EEDTEST.html). This collection uses an Albers Conical Equal Area projection. \n",
     "\n",
-    "The request also uses temporal subset is also applied to limit the size of the result.\n"
+    "The request also uses a temporal subset to limit the size of the result.\n"
    ]
   },
   {
@@ -1114,13 +1109,21 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "76fed78f",
+   "metadata": {},
+   "source": [
+    "### compare output data with reference data"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "97fa4982-7d9c-4dd9-bd4d-21342b20fe2e",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# compare output data with reference data\n",
+    "import xarray as xr\n",
     "with xr.open_dataset(hoss_projected_reference_filename) as reference_data, \\\n",
     "     xr.open_dataset(hoss_projected_filename) as output_data:\n",
     "    assert output_data.equals(reference_data), 'reference and output datasets did not match'\n"
@@ -1133,10 +1136,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "## Set Cartopy features\n",
+    "## Set Cartopy features \n",
     "import cartopy.crs as ccrs\n",
     "import cartopy.feature as cfeature\n",
-    "import xarray as xr\n",
+    "\n",
     "land = cfeature.NaturalEarthFeature(category='physical', name='land', scale='50m',\n",
     "                                    facecolor=cfeature.COLORS['land'])\n",
     "ocean = cfeature.NaturalEarthFeature(category='physical', name='ocean', scale='50m',\n",
