Address review comments
Mostly moving code and rewording comments.

DAS-1590

--- a/test/sds/SDS_Regression.ipynb
+++ b/test/sds/SDS_Regression.ipynb
@@ -56,7 +56,8 @@
     "from harmony.harmony import ProcessingFailedException\n",
     "from netCDF4 import Dataset\n",
     "import matplotlib.pyplot as plt\n",
-    "import numpy as np"
+    "import numpy as np\n",
+    "import xarray as xr"
    ]
   },
   {
@@ -1053,11 +1054,11 @@
    "id": "72eeff5d-0893-4937-bcd9-a187e548b961",
    "metadata": {},
    "source": [
-    "## Spatial subsetting of projected grid.\n",
+    "## Spatial subsetting of projected grid using a bounding box.\n",
     "\n",
     "This request uses the chained service that combines HOSS with MaskFill to offer bounding box spatial subsetting of coordinate projected gridded data hosted in OPeNDAP.\n",
     "\n",
-    "The request will use the [ABoVE Tundra Vegetation Photosynthesis and Respiration Model (TVPRM) Simulated Net Ecosystem Exchange collection](https://cmr.uat.earthdata.nasa.gov/search/concepts/C1245804308-EEDTEST.html). This collection uses an Albers Conical Equal Area projection. \n",
+    "The request will use the [ABoVE Tundra Vegetation Photosynthesis and Respiration Model (TVPRM) Simulated Net Ecosystem Exchange collection](https://cmr.uat.earthdata.nasa.gov/search/concepts/C1245804308-EEDTEST.html). This collection uses an Albers Conical Equal Area projection.\n",
     "\n",
     "The request also uses a temporal subset to limit the size of the result.\n"
    ]
@@ -1074,13 +1075,15 @@
     "    'bbox': BBox(w=-160, s=68, e=-150, n=70),\n",
     "    'granule_id': 'G1245804356-EEDTEST',\n",
     "    'temporal_range': {'start': datetime(2008, 7, 2, 0, 0, 0),\n",
-    "                 'stop': datetime(2008, 7, 2, 1, 0, 0)}\n",
+    "                       'stop': datetime(2008, 7, 2, 1, 0, 0)}\n",
     "\n",
     "}\n",
     "\n",
-    "hoss_projected_env = {Environment.LOCAL: hoss_projected_non_prod_information,\n",
-    "                     Environment.SIT: hoss_projected_non_prod_information,\n",
-    "                     Environment.UAT: hoss_projected_non_prod_information}\n",
+    "hoss_projected_env = {\n",
+    "    Environment.LOCAL: hoss_projected_non_prod_information,\n",
+    "    Environment.SIT: hoss_projected_non_prod_information,\n",
+    "    Environment.UAT: hoss_projected_non_prod_information\n",
+    "}\n",
     "\n",
     "if harmony_environment in hoss_projected_env:\n",
     "    hoss_projected_info = hoss_projected_env[harmony_environment]\n",
@@ -1110,23 +1113,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "76fed78f",
+   "id": "5722bd0f-2489-402d-8cb5-c27c1149226a",
    "metadata": {},
    "source": [
-    "### compare output data with reference data"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "97fa4982-7d9c-4dd9-bd4d-21342b20fe2e",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import xarray as xr\n",
-    "with xr.open_dataset(hoss_projected_reference_filename) as reference_data, \\\n",
-    "     xr.open_dataset(hoss_projected_filename) as output_data:\n",
-    "    assert output_data.equals(reference_data), 'reference and output datasets did not match'\n"
+    "### Set Cartopy features and plot images of data and control variables. "
    ]
   },
   {
@@ -1136,7 +1126,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "## Set Cartopy features \n",
     "import cartopy.crs as ccrs\n",
     "import cartopy.feature as cfeature\n",
     "\n",
@@ -1199,6 +1188,27 @@
     "plt.title('Output data for ABoVE TVPRM simulated Net Ecosystem Exchange\\n'\n",
     "          '2008-01-01T00:30:00Z')\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f23c5fa2-88db-4b93-afb6-b9a0161a11c2",
+   "metadata": {},
+   "source": [
+    "### Compare output data with reference data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "055a32d1-d546-4def-9096-38614c6b46fb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with xr.open_dataset(hoss_projected_reference_filename) as reference_data, \\\n",
+    "     xr.open_dataset(hoss_projected_filename) as output_data:\n",
+    "    assert output_data.equals(reference_data), 'reference and output datasets did not match'\n",
+    "    print_success('Subsetting projected grid with bounding box.')\n"
    ]
   },
   {
