Adds test for projected grids using a geojson polygon
DAS-1590

--- a/test/sds/SDS_Regression.ipynb
+++ b/test/sds/SDS_Regression.ipynb
@@ -1073,10 +1073,12 @@
     "hoss_projected_non_prod_information = {\n",
     "    'collection': Collection(id='C1245804308-EEDTEST'),\n",
     "    'bbox': BBox(w=-160, s=68, e=-150, n=70),\n",
+    "    'shape_file_path': 'north_slope.geo.json',\n",
     "    'granule_id': 'G1245804356-EEDTEST',\n",
-    "    'temporal_range': {'start': datetime(2008, 7, 2, 0, 0, 0),\n",
-    "                       'stop': datetime(2008, 7, 2, 1, 0, 0)}\n",
-    "\n",
+    "    'temporal_range': {\n",
+    "        'start': datetime(2008, 7, 2, 0, 0, 0),\n",
+    "        'stop': datetime(2008, 7, 2, 1, 0, 0)\n",
+    "    }\n",
     "}\n",
     "\n",
     "hoss_projected_env = {\n",
@@ -1108,7 +1110,26 @@
     "                                     temporal=hoss_projected_info['temporal_range'])\n",
     "    submit_and_download(harmony_client, hoss_projected_request, hoss_projected_filename)\n",
     "    assert exists(hoss_projected_filename), 'Unsuccessful HOSS spatial subset request.'\n",
-    "\n"
+    "    "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7565c0a9-67fe-42fd-a4fd-075020cb4f49",
+   "metadata": {},
+   "source": [
+    "### Load results and reference data."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "64f96581-a7bb-4221-ab8c-b4a81aa15a71",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "reference_data =  xr.open_dataset(hoss_projected_reference_filename)\n",
+    "output_data = xr.open_dataset(hoss_projected_filename) "
    ]
   },
   {
@@ -1205,10 +1226,143 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "with xr.open_dataset(hoss_projected_reference_filename) as reference_data, \\\n",
-    "     xr.open_dataset(hoss_projected_filename) as output_data:\n",
-    "    assert output_data.equals(reference_data), 'reference and output datasets did not match'\n",
-    "    print_success('Subsetting projected grid with bounding box.')\n"
+    "assert output_data.equals(reference_data), 'reference and output datasets did not match'\n",
+    "print_success('Subsetting projected grid with bounding box.')\n",
+    "\n",
+    "del output_data"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e3e03691-7375-436d-aaff-fcdd4e8c22e6",
+   "metadata": {},
+   "source": [
+    "## Spatial subsetting of projected grid using geojson polygon.\n",
+    "\n",
+    "This request uses the chained service that combines HOSS with MaskFill to offer shapefile subsetting of coordinate projected gridded data hosted in OPeNDAP.\n",
+    "\n",
+    "The request will use the [ABoVE Tundra Vegetation Photosynthesis and Respiration Model (TVPRM) Simulated Net Ecosystem Exchange collection](https://cmr.uat.earthdata.nasa.gov/search/concepts/C1245804308-EEDTEST.html). This collection uses an Albers Conical Equal Area projection.\n",
+    "\n",
+    "The request also uses a temporal subset to limit the size of the result."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ddf20717-736d-4f0e-a57e-97702f8e1c83",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "if hoss_projected_info is not None:\n",
+    "    hoss_projected_reference_filename = 'reference_images/hoss_projected_north_slope_reference_one.nc4'\n",
+    "    hoss_projected_shape_filename = 'hoss_projected_north_slope_shape.nc4'\n",
+    "    hoss_projected_request = Request(collection=hoss_projected_info['collection'],\n",
+    "                                     granule_id=hoss_projected_info['granule_id'],\n",
+    "                                     shape=hoss_projected_info['shape_file_path'],\n",
+    "                                     variables=['NEE', 'lat', 'lon'],\n",
+    "                                     temporal=hoss_projected_info['temporal_range'])\n",
+    "    submit_and_download(harmony_client, hoss_projected_request, hoss_projected_shape_filename)\n",
+    "    assert exists(hoss_projected_shape_filename), 'Unsuccessful HOSS shapefile spatial subset request.'\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7d224396-4d8e-44f9-bd87-635c54eafbe5",
+   "metadata": {},
+   "source": [
+    "### Load output data. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c0e45903-aa1d-4bde-947f-d4b6b8759050",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "reference_data =  xr.open_dataset(hoss_projected_reference_filename)\n",
+    "output_data = xr.open_dataset(hoss_projected_shape_filename)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f19701bc-d5bf-4114-aa0f-110b1bd131f1",
+   "metadata": {},
+   "source": [
+    "Plot data and control variables "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8c325b9c-df07-44eb-a015-605a85996fd6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.figure(figsize=(16, 16))\n",
+    "\n",
+    "ax = plt.subplot(1, 2, 1, projection=albers_projection)\n",
+    "ax.add_feature(ocean)\n",
+    "ax.add_feature(land)\n",
+    "ax.gridlines(color='gray', linestyle='dashed', draw_labels=True)\n",
+    "ax.set_extent([-2330000, -1800000, 3900000, 4500000], albers_projection)\n",
+    "output_data.lon.plot.pcolormesh(ax=ax, transform=albers_projection,\n",
+    "                                x='x', y='y', cmap=plt.cm.turbo,\n",
+    "                                add_colorbar=False, zorder=2)\n",
+    "plt.title('Longitude (degrees east)')\n",
+    "\n",
+    "ax = plt.subplot(1, 2, 2, projection=albers_projection)\n",
+    "ax.add_feature(ocean)\n",
+    "ax.add_feature(land)\n",
+    "ax.gridlines(color='grey', linestyle='dashed', draw_labels=True)\n",
+    "ax.set_extent([-2330000, -1800000, 3900000, 4500000], albers_projection)\n",
+    "output_data.lat.plot.pcolormesh(ax=ax, transform=albers_projection,\n",
+    "                                x='x', y='y', cmap=plt.cm.turbo,\n",
+    "                                add_colorbar=False, zorder=2)\n",
+    "plt.title('Latitude (degrees north)')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4884ebf7-79b1-4450-a4d2-bbf319145007",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.figure(figsize=(18, 10))\n",
+    "\n",
+    "ax = plt.axes(projection=albers_projection)\n",
+    "ax.add_feature(ocean)\n",
+    "ax.add_feature(land)\n",
+    "ax.gridlines(color='grey', linestyle='dashed')\n",
+    "ax.set_extent([-2330000, -1800000, 3900000, 4500000], albers_projection)\n",
+    "output_data.NEE[0].plot.pcolormesh(ax=ax, transform=albers_projection,\n",
+    "                                   x='x', y='y', cmap=plt.cm.turbo, zorder=2)\n",
+    "plt.title('Output data for ABoVE TVPRM simulated Net Ecosystem Exchange\\n'\n",
+    "          '2008-01-01T00:30:00Z')\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "bf78c79c-0fc0-4dea-885e-b0e862e74f94",
+   "metadata": {},
+   "source": [
+    "### Compare output data with reference data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "11226472-1ae6-4125-930b-0bd0cddf5eb8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "assert output_data.equals(reference_data), 'reference and output datasets did not match'\n",
+    "print_success('Subsetting projected grid with shapefile.')\n",
+    "del reference_data\n",
+    "del output_data"
    ]
   },
   {
