markdown fix up
DAS-1590

--- a/test/sds/SDS_Regression.ipynb
+++ b/test/sds/SDS_Regression.ipynb
@@ -1290,7 +1290,7 @@
    "id": "f19701bc-d5bf-4114-aa0f-110b1bd131f1",
    "metadata": {},
    "source": [
-    "Plot data and control variables "
+    "### Plot data and control variables "
    ]
   },
   {
