Delete reference_data since I reload it later anyway.
This is convenience because if you're working with just one of these tests BBox
vs Shape, it's a pain to reload the reference_data after checking the test.

DAS-1590

--- a/test/sds/SDS_Regression.ipynb
+++ b/test/sds/SDS_Regression.ipynb
@@ -1228,7 +1228,7 @@
    "source": [
     "assert output_data.equals(reference_data), 'reference and output datasets did not match'\n",
     "print_success('Subsetting projected grid with bounding box.')\n",
-    "\n",
+    "del reference_data\n",
     "del output_data"
    ]
   },
@@ -1271,7 +1271,7 @@
    "id": "7d224396-4d8e-44f9-bd87-635c54eafbe5",
    "metadata": {},
    "source": [
-    "### Load output data. "
+    "### Load reference and output data. "
    ]
   },
   {
