--- a/test/sds/SDS_Regression.ipynb
+++ b/test/sds/SDS_Regression.ipynb
@@ -11,7 +11,7 @@
     "\n",
     "* Swath Projector (a.k.a. SWOT Reprojector): `sds/swot-reproject`. A service that projects L2 swath data to a grid.\n",
     "* Variable Subsetter: `sds/variable-subsetter`. A service that extracts a subset of granule variables from OPeNDAP to provide a smaller, specific output product.\n",
-    "* Harmony OPeNDAP SubSetter (HOSS): `sds/HOSS`. A service for geographically-gridded collections, allowing variable and bounding-box spatial subsetting.\n",
+    "* Harmony OPeNDAP SubSetter (HOSS): `sds/HOSS`. A service for geographic and projected gridded collections, allowing variable and bounding-box spatial subsetting.\n",
     "* MaskFill: `sds/maskfill`. A service that sets values outside of a user-defined GeoJSON shape to a fill value.\n",
     "* Trajectory Subsetter: `sds/trajectory-subsetter`. A service that performs variable, bounding box spatial, shape file spatial and temporal subsetting on segmented trajectory data.\n",
     "\n",
@@ -19,7 +19,7 @@
     "\n",
     "## Prerequisites\n",
     "\n",
-    "The dependencies for this notebook are listed in the [environment.yaml](./environment.yaml). To test or install locally, create the papermill environment used in the automated regression testing suite: \n",
+    "The dependencies for this notebook are listed in the [environment.yaml](./environment.yaml). To test or install locally, create the papermill environment used in the automated regression testing suite:\n",
     "\n",
     "`conda env create -f ./environment.yaml && conda activate papermill`\n",
     "\n",
@@ -56,7 +56,8 @@
     "from harmony.harmony import ProcessingFailedException\n",
     "from netCDF4 import Dataset\n",
     "import matplotlib.pyplot as plt\n",
-    "import numpy as np"
+    "import numpy as np\n",
+    "import xarray as xr"
    ]
   },
   {
@@ -1029,7 +1030,6 @@
     "                                    granule_id=hoss_maskfill_info['granule_id'],\n",
     "                                    shape=hoss_maskfill_info['shape_file_path'],\n",
     "                                    variables=['/Grid/precipitationCal'])\n",
-    "\n",
     "    submit_and_download(harmony_client, hoss_maskfill_request, hoss_maskfill_file_name)\n",
     "    assert exists(hoss_maskfill_file_name), 'Unsuccessful HOSS/MaskFill polygon spatial subset request.'\n",
     "\n",
@@ -1046,7 +1046,323 @@
     "\n",
     "    print_success('HOSS/MaskFill polygon spatial subset request.')\n",
     "else:\n",
-    "    print(f'HOSS/MaskFill chained service is not configured for environment: \"{harmony_environment}\" - skipping test.')"
+    "    print(f'HOSS/MaskFill chained service is not configured for environment: \"{harmony_environment}\" - skipping test.')\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "72eeff5d-0893-4937-bcd9-a187e548b961",
+   "metadata": {},
+   "source": [
+    "## Spatial subsetting of projected grid using a bounding box.\n",
+    "\n",
+    "This request uses the chained service that combines HOSS with MaskFill to offer bounding box spatial subsetting of coordinate projected gridded data hosted in OPeNDAP.\n",
+    "\n",
+    "The request will use the [ABoVE Tundra Vegetation Photosynthesis and Respiration Model (TVPRM) Simulated Net Ecosystem Exchange collection](https://cmr.uat.earthdata.nasa.gov/search/concepts/C1245804308-EEDTEST.html). This collection uses an Albers Conical Equal Area projection.\n",
+    "\n",
+    "The request also uses a temporal subset to limit the size of the result.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4657e58b-8153-4f81-a794-3f8f8a1620b1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "hoss_projected_non_prod_information = {\n",
+    "    'collection': Collection(id='C1245804308-EEDTEST'),\n",
+    "    'bbox': BBox(w=-160, s=68, e=-150, n=70),\n",
+    "    'shape_file_path': 'north_slope.geo.json',\n",
+    "    'granule_id': 'G1245804356-EEDTEST',\n",
+    "    'temporal_range': {\n",
+    "        'start': datetime(2008, 7, 2, 0, 0, 0),\n",
+    "        'stop': datetime(2008, 7, 2, 1, 0, 0)\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "hoss_projected_env = {\n",
+    "    Environment.LOCAL: hoss_projected_non_prod_information,\n",
+    "    Environment.SIT: hoss_projected_non_prod_information,\n",
+    "    Environment.UAT: hoss_projected_non_prod_information\n",
+    "}\n",
+    "\n",
+    "if harmony_environment in hoss_projected_env:\n",
+    "    hoss_projected_info = hoss_projected_env[harmony_environment]\n",
+    "else:\n",
+    "    hoss_projected_info = None"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "64f96581-a7bb-4221-ab8c-b4a81aa15a71",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "if hoss_projected_info is not None:\n",
+    "    hoss_projected_reference_filename = 'reference_images/hoss_projected_north_slope_reference_one.nc4'\n",
+    "    hoss_projected_filename = 'hoss_projected_north_slope.nc4'\n",
+    "    hoss_projected_request = Request(collection=hoss_projected_info['collection'],\n",
+    "                                     granule_id=hoss_projected_info['granule_id'],\n",
+    "                                     spatial=hoss_projected_info['bbox'],\n",
+    "                                     variables=['NEE', 'lat', 'lon'],\n",
+    "                                     temporal=hoss_projected_info['temporal_range'])\n",
+    "    submit_and_download(harmony_client, hoss_projected_request, hoss_projected_filename)\n",
+    "    assert exists(hoss_projected_filename), 'Unsuccessful HOSS spatial subset request.'\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7565c0a9-67fe-42fd-a4fd-075020cb4f49",
+   "metadata": {},
+   "source": [
+    "### Load results and reference data."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "64f96581-a7bb-4221-ab8c-b4a81aa15a71",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "reference_data =  xr.open_dataset(hoss_projected_reference_filename)\n",
+    "output_data = xr.open_dataset(hoss_projected_filename) "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5722bd0f-2489-402d-8cb5-c27c1149226a",
+   "metadata": {},
+   "source": [
+    "### Set Cartopy features and plot images of data and control variables. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "38707fb9-1f9e-4f35-91e4-ed7f07bbfc83",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import cartopy.crs as ccrs\n",
+    "import cartopy.feature as cfeature\n",
+    "\n",
+    "land = cfeature.NaturalEarthFeature(category='physical', name='land', scale='50m',\n",
+    "                                    facecolor=cfeature.COLORS['land'])\n",
+    "ocean = cfeature.NaturalEarthFeature(category='physical', name='ocean', scale='50m',\n",
+    "                                     facecolor=cfeature.COLORS['water'])\n",
+    "\n",
+    "albers_projection = ccrs.AlbersEqualArea(central_longitude=-96.0, central_latitude=40.0,\n",
+    "                                         false_easting=0.0, false_northing=0.0,\n",
+    "                                         standard_parallels=(50.0, 70.0), globe=None)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bc30f67f-21d8-409a-8c1e-8f3b0914961a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.figure(figsize=(16, 16))\n",
+    "\n",
+    "ax = plt.subplot(1, 2, 1, projection=albers_projection)\n",
+    "ax.add_feature(ocean)\n",
+    "ax.add_feature(land)\n",
+    "ax.gridlines(color='gray', linestyle='dashed', draw_labels=True)\n",
+    "ax.set_extent([-2330000, -1800000, 3900000, 4500000], albers_projection)\n",
+    "output_data.lon.plot.pcolormesh(ax=ax, transform=albers_projection,\n",
+    "                                x='x', y='y', cmap=plt.cm.turbo,\n",
+    "                                add_colorbar=False, zorder=2)\n",
+    "plt.title('Longitude (degrees east)')\n",
+    "\n",
+    "ax = plt.subplot(1, 2, 2, projection=albers_projection)\n",
+    "ax.add_feature(ocean)\n",
+    "ax.add_feature(land)\n",
+    "ax.gridlines(color='grey', linestyle='dashed', draw_labels=True)\n",
+    "ax.set_extent([-2330000, -1800000, 3900000, 4500000], albers_projection)\n",
+    "output_data.lat.plot.pcolormesh(ax=ax, transform=albers_projection,\n",
+    "                                x='x', y='y', cmap=plt.cm.turbo,\n",
+    "                                add_colorbar=False, zorder=2)\n",
+    "plt.title('Latitude (degrees north)')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "95e16ba1-1b59-473a-9257-c6a69fbeae6a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.figure(figsize=(18, 10))\n",
+    "\n",
+    "ax = plt.axes(projection=albers_projection)\n",
+    "ax.add_feature(ocean)\n",
+    "ax.add_feature(land)\n",
+    "ax.gridlines(color='grey', linestyle='dashed')\n",
+    "ax.set_extent([-2330000, -1800000, 3900000, 4500000], albers_projection)\n",
+    "output_data.NEE[0].plot.pcolormesh(ax=ax, transform=albers_projection,\n",
+    "                                   x='x', y='y', cmap=plt.cm.turbo, zorder=2)\n",
+    "plt.title('Output data for ABoVE TVPRM simulated Net Ecosystem Exchange\\n'\n",
+    "          '2008-01-01T00:30:00Z')\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f23c5fa2-88db-4b93-afb6-b9a0161a11c2",
+   "metadata": {},
+   "source": [
+    "### Compare output data with reference data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "055a32d1-d546-4def-9096-38614c6b46fb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "assert output_data.equals(reference_data), 'reference and output datasets did not match'\n",
+    "print_success('Subsetting projected grid with bounding box.')\n",
+    "del reference_data\n",
+    "del output_data"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e3e03691-7375-436d-aaff-fcdd4e8c22e6",
+   "metadata": {},
+   "source": [
+    "## Spatial subsetting of projected grid using geojson polygon.\n",
+    "\n",
+    "This request uses the chained service that combines HOSS with MaskFill to offer shapefile subsetting of coordinate projected gridded data hosted in OPeNDAP.\n",
+    "\n",
+    "The request will use the [ABoVE Tundra Vegetation Photosynthesis and Respiration Model (TVPRM) Simulated Net Ecosystem Exchange collection](https://cmr.uat.earthdata.nasa.gov/search/concepts/C1245804308-EEDTEST.html). This collection uses an Albers Conical Equal Area projection.\n",
+    "\n",
+    "The request also uses a temporal subset to limit the size of the result."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ddf20717-736d-4f0e-a57e-97702f8e1c83",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "if hoss_projected_info is not None:\n",
+    "    hoss_projected_reference_filename = 'reference_images/hoss_projected_north_slope_reference_one.nc4'\n",
+    "    hoss_projected_shape_filename = 'hoss_projected_north_slope_shape.nc4'\n",
+    "    hoss_projected_request = Request(collection=hoss_projected_info['collection'],\n",
+    "                                     granule_id=hoss_projected_info['granule_id'],\n",
+    "                                     shape=hoss_projected_info['shape_file_path'],\n",
+    "                                     variables=['NEE', 'lat', 'lon'],\n",
+    "                                     temporal=hoss_projected_info['temporal_range'])\n",
+    "    submit_and_download(harmony_client, hoss_projected_request, hoss_projected_shape_filename)\n",
+    "    assert exists(hoss_projected_shape_filename), 'Unsuccessful HOSS shapefile spatial subset request.'\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7d224396-4d8e-44f9-bd87-635c54eafbe5",
+   "metadata": {},
+   "source": [
+    "### Load reference and output data. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c0e45903-aa1d-4bde-947f-d4b6b8759050",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "reference_data =  xr.open_dataset(hoss_projected_reference_filename)\n",
+    "output_data = xr.open_dataset(hoss_projected_shape_filename)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f19701bc-d5bf-4114-aa0f-110b1bd131f1",
+   "metadata": {},
+   "source": [
+    "### Plot data and control variables "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8c325b9c-df07-44eb-a015-605a85996fd6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.figure(figsize=(16, 16))\n",
+    "\n",
+    "ax = plt.subplot(1, 2, 1, projection=albers_projection)\n",
+    "ax.add_feature(ocean)\n",
+    "ax.add_feature(land)\n",
+    "ax.gridlines(color='gray', linestyle='dashed', draw_labels=True)\n",
+    "ax.set_extent([-2330000, -1800000, 3900000, 4500000], albers_projection)\n",
+    "output_data.lon.plot.pcolormesh(ax=ax, transform=albers_projection,\n",
+    "                                x='x', y='y', cmap=plt.cm.turbo,\n",
+    "                                add_colorbar=False, zorder=2)\n",
+    "plt.title('Longitude (degrees east)')\n",
+    "\n",
+    "ax = plt.subplot(1, 2, 2, projection=albers_projection)\n",
+    "ax.add_feature(ocean)\n",
+    "ax.add_feature(land)\n",
+    "ax.gridlines(color='grey', linestyle='dashed', draw_labels=True)\n",
+    "ax.set_extent([-2330000, -1800000, 3900000, 4500000], albers_projection)\n",
+    "output_data.lat.plot.pcolormesh(ax=ax, transform=albers_projection,\n",
+    "                                x='x', y='y', cmap=plt.cm.turbo,\n",
+    "                                add_colorbar=False, zorder=2)\n",
+    "plt.title('Latitude (degrees north)')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4884ebf7-79b1-4450-a4d2-bbf319145007",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.figure(figsize=(18, 10))\n",
+    "\n",
+    "ax = plt.axes(projection=albers_projection)\n",
+    "ax.add_feature(ocean)\n",
+    "ax.add_feature(land)\n",
+    "ax.gridlines(color='grey', linestyle='dashed')\n",
+    "ax.set_extent([-2330000, -1800000, 3900000, 4500000], albers_projection)\n",
+    "output_data.NEE[0].plot.pcolormesh(ax=ax, transform=albers_projection,\n",
+    "                                   x='x', y='y', cmap=plt.cm.turbo, zorder=2)\n",
+    "plt.title('Output data for ABoVE TVPRM simulated Net Ecosystem Exchange\\n'\n",
+    "          '2008-01-01T00:30:00Z')\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "bf78c79c-0fc0-4dea-885e-b0e862e74f94",
+   "metadata": {},
+   "source": [
+    "### Compare output data with reference data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "11226472-1ae6-4125-930b-0bd0cddf5eb8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "assert output_data.equals(reference_data), 'reference and output datasets did not match'\n",
+    "print_success('Subsetting projected grid with shapefile.')\n",
+    "del reference_data\n",
+    "del output_data"
    ]
   },
   {
@@ -1385,8 +1701,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
-  }
+   "version": "3.8.13"
+  },
+  "name": "SDS_Regression.ipynb"
  },
  "nbformat": 4,
  "nbformat_minor": 5
