DAS-1588 - Use xarray.Dataset.equal to check all variables in one call.

--- a/test/sds/SDS_Regression.ipynb
+++ b/test/sds/SDS_Regression.ipynb
@@ -1411,10 +1411,8 @@
     "    reference_data =  xr.open_dataset(hoss_bounds_reference_file_name, group='/Grid')\n",
     "    output_data = xr.open_dataset(hoss_bounds_file_name, group='/Grid') \n",
     "\n",
-    "    for variable_name, variable in output_data.variables.items():\n",
-    "        assert variable_name in reference_data.variables, f'\"{variable_name}\" not in reference image'\n",
-    "        assert variable.equals(reference_data.variables[variable_name]), f'\"{variable_name}\" does not match reference'\n",
-    "    \n",
+    "    assert output_data.equals(reference_data), f'Output file does not match reference {hoss_bounds_reference_file_name}'\n",
+    "\n",
     "    reference_data.close()\n",
     "    output_data.close()\n",
     "    reference_data = None\n",
