DAS-1588 - Add HOSS regression test for collection with bounds variables

--- a/test/sds/SDS_Regression.ipynb
+++ b/test/sds/SDS_Regression.ipynb
@@ -653,7 +653,9 @@
     "hoss_non_prod_information = {'collection': Collection(id='C1238392622-EEDTEST'),\n",
     "                             'granule_id': 'G1245840464-EEDTEST',\n",
     "                             'temporal_collection': Collection(id='C1245662776-EEDTEST'),\n",
-    "                             'temporal_granule_id': 'G1245662797-EEDTEST'}\n",
+    "                             'temporal_granule_id': 'G1245662797-EEDTEST',\n",
+    "                             'bounds_collection': Collection(id='C1245618475-EEDTEST'),\n",
+    "                             'bounds_granule_id': 'G1255863984-EEDTEST'}\n",
     "\n",
     "hoss_env = {Environment.LOCAL: hoss_non_prod_information,\n",
     "            Environment.SIT: hoss_non_prod_information,\n",
@@ -1363,6 +1365,62 @@
     "print_success('Subsetting projected grid with shapefile.')\n",
     "del reference_data\n",
     "del output_data"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "85d6d22e",
+   "metadata": {},
+   "source": [
+    "### Request for granule that has bounds variables:\n",
+    "\n",
+    "This regression test will use the GPM/IMERGHH collection, which is geographically gridded, to ensure that a granule with bounds variables extracts the expected temporal and spatial range:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e99932fa",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "if hoss_info is not None:\n",
+    "    hoss_bounds_file_name = 'hoss_bounds.nc4'\n",
+    "    hoss_bounds_reference_file_name = 'reference_images/hoss_bounds_reference_one.nc4'\n",
+    "    hoss_bounds_bbox = BBox(w=60, s=-15, e=75, n=0)\n",
+    "    hoss_bounds_request = Request(collection=hoss_info['bounds_collection'],\n",
+    "                                  granule_id=[hoss_info['bounds_granule_id']],\n",
+    "                                  variables=['/Grid/precipitationCal'],\n",
+    "                                  spatial=hoss_bounds_bbox,\n",
+    "                                  temporal={'start': datetime(2020, 1, 18, 18, 45, 0),\n",
+    "                                            'stop': datetime(2020, 1, 18, 19, 45, 0)})\n",
+    "\n",
+    "    submit_and_download(harmony_client, hoss_bounds_request, hoss_bounds_file_name)\n",
+    "    assert exists(hoss_bounds_file_name), 'Unsuccessful HOSS bounds request.'\n",
+    "\n",
+    "    expected_variables = ['/Grid/precipitationCal', '/Grid/lat', '/Grid/lat_bnds',\n",
+    "                          '/Grid/lon', '/Grid/lon_bnds', '/Grid/time', '/Grid/time_bnds']\n",
+    "    assert all_variables_present(hoss_bounds_file_name, expected_variables), 'Missing variables in HOSS output'\n",
+    "\n",
+    "    plot_variable(hoss_bounds_file_name, '/Grid/precipitationCal', '/Grid/lon', '/Grid/lat',\n",
+    "                  title='HOSS bounds results.', colourbar_units='Calibrated precipitation (mm.hr-1)',\n",
+    "                  x_label='Longitude (degrees east)', y_label='Latitude (degrees north)',\n",
+    "                  levels=np.linspace(0, 60, 51))\n",
+    "\n",
+    "    # Ensure that all variables returned are expected and are equal to those in a reference file:\n",
+    "    reference_data =  xr.open_dataset(hoss_bounds_reference_file_name, group='/Grid')\n",
+    "    output_data = xr.open_dataset(hoss_bounds_file_name, group='/Grid') \n",
+    "\n",
+    "    assert output_data.equals(reference_data), f'Output file does not match reference {hoss_bounds_reference_file_name}'\n",
+    "\n",
+    "    reference_data.close()\n",
+    "    output_data.close()\n",
+    "    reference_data = None\n",
+    "    output_data = None\n",
+    "    \n",
+    "    print_success('HOSS bounds request.')\n",
+    "else:\n",
+    "    print(f'HOSS is not configured for environment: \"{harmony_environment}\" - skipping test.')"
    ]
   },
   {
